repairing the buddy search on ie7

--- a/themes/pbpoker/pbpoker.css
+++ b/themes/pbpoker/pbpoker.css
@@ -1271,11 +1271,6 @@ div#buddies-search
  color: rgb(108, 108, 108);
  overflow: hidden;
  padding: 13px 0 0 58px;
- width: 510px;
-}
-
-div#buddies-search form { /* IE7 */
-	position:relative;
 }
 
 div#buddies-search .poker_submit .label
@@ -1321,7 +1316,7 @@ div#buddies-search .poker_submit .label
  font-weight: bold;
  margin: 0;
  overflow: hidden;
-	height: 15px;
+ height: 15px;
  padding: 8px;
  width: 480px;
 }
@@ -1333,6 +1328,17 @@ div#buddies-search .poker_submit .label
  margin: 5px 6px 5px 0;
 }
 
+*:first-child+html #buddies-search form div { /* IE7 */
+	position:relative;
+	z-index: 2;
+	overflow: hidden;
+}
+/* due to poor markup its better to clear here */
+#edit-profile-nickname-wrapper,
+#edit-profile-gender-wrapper,
+#edit-profile-city-wrapper {
+	clear: left;
+}
 
 #buddies-search .form-text, #buddies-search .form-select
 {
